[gd_scene load_steps=2 format=2]

[ext_resource path="res://Settings.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Settings" type="TabContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
tab_align = 0

[node name="Game Settings" type="Tabs" parent="Settings"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Video Settings" type="Tabs" parent="Settings"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Display Settings" type="VBoxContainer" parent="Settings/Video Settings"]
margin_left = 10.0
margin_top = 10.0
margin_right = 150.0
margin_bottom = 64.0

[node name="lbl_Display Settings" type="RichTextLabel" parent="Settings/Video Settings/Display Settings"]
margin_right = 150.0
margin_bottom = 15.0
text = "Display Settings"
fit_content_height = true
scroll_active = false

[node name="FullScreen" type="CheckButton" parent="Settings/Video Settings/Display Settings"]
margin_top = 19.0
margin_right = 150.0
margin_bottom = 59.0
text = "Full Screen"

[node name="lbl_ResolutionOptions" type="RichTextLabel" parent="Settings/Video Settings/Display Settings"]
margin_top = 63.0
margin_right = 150.0
margin_bottom = 78.0
text = "Resolution Options"
fit_content_height = true
scroll_active = false

[node name="ResolutionOptions" type="OptionButton" parent="Settings/Video Settings/Display Settings"]
margin_top = 82.0
margin_right = 150.0
margin_bottom = 102.0

[node name="Audio Settings" type="Tabs" parent="Settings"]
visible = false
margin_right = 40.0
margin_bottom = 24.0

[node name="X" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -27.0
margin_bottom = 23.0
text = "X"

[connection signal="toggled" from="Settings/Video Settings/Display Settings/FullScreen" to="." method="_on_FullScreen_toggled"]
[connection signal="item_selected" from="Settings/Video Settings/Display Settings/ResolutionOptions" to="." method="_on_ResolutionOptions_item_selected"]
[connection signal="pressed" from="X" to="." method="_on_X_pressed"]
